fixed navigation on mobile

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -22,8 +22,13 @@
   margin-bottom: 100px;
 }
 
-.main {
+.mainCard {
   background: #d3f8d3;
+  box-shadow: 0 0 25px 0 black;
+}
+
+.cardShadow {
+  box-shadow: 0 0 25px 0 black;
 }
 
 .safeSection {
@@ -110,6 +115,12 @@
   height: 250px;
   position: relative;
   overflow: hidden
+}
+
+@media only screen and (max-width: 600px) {
+  .item .box {
+    /* max-width: 30%; */
+  }
 }
 
 .item .cover {
