--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -1,13 +1,10 @@
 .navigation {
   background-color: white;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 75px;
-  display: flex;
-  align-items: center;
+ 
+  /* height: 75px; */
+  /* display: flex;
+  align-items: center; */
   box-shadow: 0 0 25px 0 black;
-  z-index: 999;
 }
 
 .profile {
@@ -42,7 +39,7 @@
   color: #000;
 }
 
-.dropdown1 .dropbtn {  
+.dropdown .dropbtn {  
   border: none;
   outline: none;
   color: #00A36C;
@@ -50,6 +47,18 @@
   margin: 0;
   background-color: inherit;
   font-size: 1.5rem;
+}
+
+@media only screen and (max-width: 600px) {
+  .dropdown {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .mobileProfile {
+    display: none;
+  }
 }
 
 .caret {
@@ -79,7 +88,7 @@
   color: #313750
 }
 
-.dropdown1:hover .dropdownContent {
+.dropdown:hover .dropdownContent {
   display: block;
   float: right;
 }
